--- a/SearchWorkWPF/MainWindow.xaml
+++ b/SearchWorkWPF/MainWindow.xaml
@@ -12,17 +12,15 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" MinHeight="150"></RowDefinition>
             <RowDefinition Height="auto"></RowDefinition>
-            <RowDefinition Height="90" MinHeight="90" MaxHeight="90" ></RowDefinition>
+            <RowDefinition Height="60" ></RowDefinition>
         </Grid.RowDefinitions>
-
-        <ListView Name="lstw" Margin="5" ScrollViewer.CanContentScroll="False" >
+        <ListView Name="lstw" Margin="5" ScrollViewer.CanContentScroll="False" Visibility="Collapsed" >
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
                         <GridViewColumn Header="Дата" DisplayMemberBinding="{Binding Path=Date, ConverterCulture='ru-ru', StringFormat={}{0:C}, TargetNullValue=[Данные не предоставлены]}"></GridViewColumn>
                         <GridViewColumn Header="Название" DisplayMemberBinding="{Binding Path=Title, TargetNullValue=[Данные не предоставлены] }"></GridViewColumn>
-                         <GridViewColumn Header="Зарплата" DisplayMemberBinding="{Binding Path=Price, ConverterCulture='ru-ru', StringFormat={}{0:C}, TargetNullValue=[Данные не предоставлены]}"></GridViewColumn>                        
-                        <!-- Шаблоны ячеек ListView -->
+                        <GridViewColumn Header="Зарплата" DisplayMemberBinding="{Binding Path=Price, ConverterCulture='ru-ru', StringFormat={}{0:C}, TargetNullValue=[Данные не предоставлены]}"></GridViewColumn>
 
                         <GridViewColumn Header="Telephone" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True">
                             <GridViewColumn.CellTemplate>
@@ -48,7 +46,6 @@
                         </GridViewColumn>
 
                         <GridViewColumn Header="Url" Width="50" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.CanContentScroll="True">
-                            <!--Header="Url" DisplayMemberBinding="{Binding Path=Url, TargetNullValue=[Данные не предоставлены]}"-->
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
                                     <TextBox 
@@ -56,28 +53,56 @@
                                         TargetNullValue=[Данные не предоставлены]}"
                                         Margin="5" MouseDown="TextBox_MouseDown"                                        
                                         />
-                                    <!--TextWrapping="Wrap"   -->
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
                         </GridViewColumn>
-
                     </GridView.Columns>
-
                 </GridView>
             </ListView.View>
         </ListView>
-        <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" 
-                      VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5" Foreground="Black"/>
 
-        <StackPanel Grid.Row="2" VerticalAlignment="Bottom" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True">
+        <StackPanel x:Name="splContentView" Grid.Row="0" Margin="5" Orientation="Vertical">
+            <StackPanel.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#7F5E07C7" Offset="0.011"/>
+                    <GradientStop Color="#3FD191F5" Offset="1"/>
+                </LinearGradientBrush>
+            </StackPanel.Background>
+            <StackPanel Background="#FFFBFBE4" Margin="5">
+                <TextBlock x:Name="tb_title" Text="Плотник" Grid.Row="0" Margin="5,5,0,0" FontSize="21.333"/>
+                <TextBlock x:Name="tb_date" Text="17 06 2017" Grid.Row="1"  Margin="5,5,0,0"/>
+                <StackPanel Orientation="Horizontal" Grid.Row="2">
+                    <TextBlock Text="Зарплата:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                    <TextBlock x:Name="tb_infoPrice" Text="10000" Grid.Row="2"  Margin="5,5,20,0" FontSize="14.667"/>
+                    <TextBlock Text="График:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                    <TextBlock x:Name="tb_emp" Text="Полный день" Grid.Row="2"  Margin="5,5,20,0" FontSize="14.667"/>
+                    <TextBlock Text="Город:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                    <TextBlock x:Name="tb_city" Text="Горловка" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Телефон:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                    <TextBlock x:Name="tb_phone" Text="000-00-00-000" Grid.Row="2"  Margin="5,5,20,0" FontSize="14.667"/>
+                    <TextBlock Text="Url:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                    <TextBlock x:Name="tb_url" Text="http:\\" Grid.Row="2"  Margin="5,5,20,0" FontSize="14.667"/>                    
+                </StackPanel>
+                <TextBlock Text="Описание:" Grid.Row="2"  Margin="5,5,0,0" FontSize="14.667"/>
+                <TextBlock x:Name="tb_description" Text="--------" Grid.Row="2"  Margin="5,5,20,0" FontSize="14.667"/>
+
+            </StackPanel>
+        </StackPanel>
+       
+        <GridSplitter Grid.Row="1" IsEnabled="False" HorizontalAlignment="Stretch" 
+                      VerticalAlignment="Bottom" ResizeBehavior="PreviousAndNext" Height="5" Foreground="Black"/>
+        <StackPanel Grid.Row="2" VerticalAlignment="Bottom" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" d:IsLocked="True">
 
             <Button  Name="btnGetInfoJob"  Padding="4" Margin="20,10" HorizontalContentAlignment="Left" Click="btnGetInfoJob_Click" HorizontalAlignment="Left" Width="117" Height="26" VerticalAlignment="Bottom">Получить вакансии</Button>
         </StackPanel>
-        <ProgressBar Name="pb_loadJob" HorizontalAlignment="Left" Height="17" Margin="157,54,0,0" Grid.Row="2" VerticalAlignment="Top" Width="409" Maximum="1" LargeChange="0.1"/>
-        <TextBlock x:Name="tb_loadJob" Margin="157,55,0,0" Grid.Row="2" TextWrapping="Wrap" Text="0/0" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="409" TextAlignment="Center"/>
+        <ProgressBar x:Name="pb_loadJob" Margin="157,29,0,0" HorizontalAlignment="Left" Grid.Row="2" Height="17"   VerticalAlignment="Top" Width="409" Maximum="1" LargeChange="0.1" d:IsLocked="True"/>
+        <TextBlock   x:Name="tb_loadJob" Margin="157,29,0,0" Grid.Row="2" TextWrapping="Wrap" Text="0/0" VerticalAlignment="Top" Height="16" HorizontalAlignment="Left" Width="409" TextAlignment="Center" d:IsLocked="True"/>
     </Grid>
     <Window.TaskbarItemInfo>
         <TaskbarItemInfo x:Name="taskBarItem" ProgressState="Normal"  ProgressValue="{Binding ElementName=pb_loadJob, Path=Value}">
-        </TaskbarItemInfo>        
+        </TaskbarItemInfo>
     </Window.TaskbarItemInfo>
 </Window>
